force-app/main/default/objects/Validation_Rules__c/Validation_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting&#39;s purpose is to add exceptions to certain users or profile for validation rules.</description>
    <label>Validation Rules</label>
</CustomObject>