force-app/main/default/objects/Validation_Rules__c/fields/By_Pass_Trigger_Validation__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Trigger_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Trigger Validation</label>
    <type>Checkbox</type>
</CustomField>