force-app/main/default/objects/Validation_Rules__c/fields/Bypass_Custom_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Custom_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Custom Validation</label>
    <type>Checkbox</type>
</CustomField>