force-app/main/default/objects/Validation_Rules__c/fields/Bypass_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting is used in validation rules and apex classes to prevent validation rules from firing for certain users and profiles.</description>
    <label>Bypass Rules</label>
    <type>Checkbox</type>
</CustomField>