force-app/main/default/objects/Validation_Rules__c/fields/Bypass_Rules_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Rules_Payment_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Rules Payment Status</label>
    <type>Checkbox</type>
</CustomField>